tests/invalid/undef_type.err_exp
undef_type.m:001: Warning: interface for module `undef_type' does not export
undef_type.m:001:   anything.
undef_type.m:001:   To be useful, a module should export something. A file
undef_type.m:001:   should contain at least one declaration other than
undef_type.m:001:   `:- import_module' in its interface section(s). This would
undef_type.m:001:   normally be a `:- pred', `:- func', `:- type', `:- inst' or
undef_type.m:001:   `:- mode' declaration.
undef_type.m:011: In the first argument of function symbol `d' of the type
undef_type.m:011:   `undef_type.t1'/0:
undef_type.m:011:   error: undefined type `undef1'/0.
undef_type.m:018: In declaration of predicate `undef_type.q'/1:
undef_type.m:018:   error: undefined type `undef2'/0.
undef_type.m:021: In declaration of predicate `undef_type.r'/1:
undef_type.m:021:   error: undefined type `io.state'/0.
undef_type.m:021:   (The module `io' has not been imported.)
